--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>My Personal Website</title>
+  <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+  <header>
+    <h1>Your Name</h1>
+    <p>Welcome to my website</p>
+  </header>
+
+  <section>
+    <h2>About Me</h2>
+    <p>Brief intro about who you are.</p>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <p>Short list of your work or research.</p>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>Email: you@example.com</p>
+  </section>
+
+  <footer>
+    &copy; 2025 Your Name
+  </footer>
+
 </body>
 </html>
