--- a/projects/index.html
+++ b/projects/index.html
@@ -17,9 +17,11 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="projects" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"rsatapat"},"description":"A growing collection of your cool projects.","headline":"projects","url":"http://localhost:4000/projects/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"rsatapat","url":"rsatapat.github.io"},"description":"A growing collection of your cool projects.","headline":"projects","url":"http://localhost:4000/projects/"}</script>
 <!-- End Jekyll SEO tag -->
-<!-- add bootstrap-min locally -->
+<link rel="canonical" href="https://rsatapat.github.io/" />
+  <meta property="og:url" content="https://rsatapat.github.io/" />
+  <!-- add bootstrap-min locally -->
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
   <!-- for adding fonts locally -->
   <link id="main-stylesheet" rel="stylesheet" href="/assets/css/style.css">
@@ -163,7 +165,7 @@
         </ul>
       </div>
       <div class="footer-col">
-        <p></p>
+        <p>Personal website of Roshan showcasing projects and blogs. My interests: Data science, Data analysis, Python, Behavioural neroscience</p>
       </div>
     </div>
 
