--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta property="og:title" content="about me" />
 <meta name="author" content="rsatapat" />
 <meta property="og:locale" content="en_US" />
+<meta name="description" content="Personal website of Roshan showcasing projects and blogs. My interests: Data science, Data analysis, Python, Behavioural neroscience" />
+<meta property="og:description" content="Personal website of Roshan showcasing projects and blogs. My interests: Data science, Data analysis, Python, Behavioural neroscience" />
 <link rel="canonical" href="http://localhost:4000/" />
 <meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="rsatapat" />
@@ -15,9 +17,11 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="about me" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"rsatapat"},"headline":"about me","name":"rsatapat","url":"http://localhost:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"rsatapat","url":"rsatapat.github.io"},"description":"Personal website of Roshan showcasing projects and blogs. My interests: Data science, Data analysis, Python, Behavioural neroscience","headline":"about me","name":"rsatapat","url":"http://localhost:4000/"}</script>
 <!-- End Jekyll SEO tag -->
-<!-- add bootstrap-min locally -->
+<link rel="canonical" href="https://rsatapat.github.io/" />
+  <meta property="og:url" content="https://rsatapat.github.io/" />
+  <!-- add bootstrap-min locally -->
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
   <!-- for adding fonts locally -->
   <link id="main-stylesheet" rel="stylesheet" href="/assets/css/style.css">
@@ -158,7 +162,7 @@
         </ul>
       </div>
       <div class="footer-col">
-        <p></p>
+        <p>Personal website of Roshan showcasing projects and blogs. My interests: Data science, Data analysis, Python, Behavioural neroscience</p>
       </div>
     </div>
 
