removed the footer
removed the footer by commenting out in base.html

--- a/blogs-tags/index.html
+++ b/blogs-tags/index.html
@@ -77,7 +77,9 @@
 </ul>
 
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -111,6 +113,8 @@
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
