--- a/blogs/Phd-blog/index.html
+++ b/blogs/Phd-blog/index.html
@@ -332,7 +332,9 @@ For preprocessing, data from the CSV and JSON files were merged into 2D NumPy ar
 </article>
 
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -366,6 +368,8 @@ For preprocessing, data from the CSV and JSON files were merged into 2D NumPy ar
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
