--- a/blogs/closedloop-experiment/index.html
+++ b/blogs/closedloop-experiment/index.html
@@ -239,7 +239,9 @@ main()
 </article>
 
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -273,6 +275,8 @@ main()
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
