--- a/blogs/matrix-multiplication/index.html
+++ b/blogs/matrix-multiplication/index.html
@@ -192,7 +192,9 @@ This column–row perspective makes the idea behind Principal Component Analysis
 </article>
 
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -226,6 +228,8 @@ This column–row perspective makes the idea behind Principal Component Analysis
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
