--- a/blogs/messy-data/index.html
+++ b/blogs/messy-data/index.html
@@ -166,7 +166,9 @@ Together, these components make Xarray a powerful way to work with structured mu
 </article>
 
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -200,6 +202,8 @@ Together, these components make Xarray a powerful way to work with structured mu
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
