--- a/blogs-tags/phd/index.html
+++ b/blogs-tags/phd/index.html
@@ -117,7 +117,9 @@
 </div>
 
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -151,6 +153,8 @@
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
