--- a/blogs/index.html
+++ b/blogs/index.html
@@ -105,7 +105,9 @@
     </div>
 
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -139,6 +141,8 @@
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
