--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
             </p>
 </div>
       </div>
-    </main><link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
+    </main>
+
+    <!--<link id="fa-stylesheet" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
 
 <footer class="site-footer h-card">
   <data class="u-url" value="/"></data>
@@ -181,6 +183,8 @@
 
 </footer>
 
-</body>
+-->
+
+  </body>
 
 </html>
