fixed the meddy-data blogpost

--- a/blogs-tags/data-analysis/index.html
+++ b/blogs-tags/data-analysis/index.html
@@ -82,6 +82,9 @@
       <a href="/blogs-tags/data-analysis/" class="badge bg-dark text-white me-1" 
       style="font-size: 0.65rem; text-decoration: none !important;">data-analysis</a>
     
+      <a href="/blogs-tags/python/" class="badge bg-dark text-white me-1" 
+      style="font-size: 0.65rem; text-decoration: none !important;">python</a>
+    
   </li>
 
 </ul>
