--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     <div class="col-sm-8 mt-3 mt-md-0 order-2 order-lg-1" style="text-align: justify;">
         <p>I am a scientist and an engineer with broad interests, from behavioural neuroscience to automotive engineering. I take a hands-on approach to learning and believe the best way to pick up a new skill is by building something with it.</p>
 
-<p>I earned my bachelor’s and master’s degrees in Biotechnology from IIT Kharagpur. After that, I moved to Austria for my PhD in <a href="https://joesch-lab.pages.ist.ac.at/">Prof. Joesch’s lab</a> at the <a href="https://ist.ac.at/home">Institute of Science and Technology Austria</a>, where I studied the visual systems of invertebrates. You can find an overview of my PhD research <a href="projects/PhD_project">here</a>. If you’re more technically inclined, feel free to check out my <a href="https://research-explorer.ista.ac.at/record/18568">thesis</a> or the <a href="https://www.nature.com/articles/s41467-024-53173-w">paper</a> I co-authored.</p>
+<p>I earned my bachelor’s and master’s degrees in Biotechnology from <a href="https://www.iitkgp.ac.in/">IIT Kharagpur</a>. After that, I moved to Austria for my PhD in <a href="https://joesch-lab.pages.ist.ac.at/">Prof. Joesch’s lab</a> at the <a href="https://ist.ac.at/home">Institute of Science and Technology Austria</a>, where I studied the visual systems of invertebrates. You can find an overview of my PhD research <a href="projects/PhD_project">here</a>. If you’re more technically inclined, feel free to check out my <a href="https://research-explorer.ista.ac.at/record/18568">thesis</a> or the <a href="https://www.nature.com/articles/s41467-024-53173-w">paper</a> I co-authored.</p>
 
-<p>I’m currently looking for roles in data science, data analysis, or consulting. You can take a look at my <a href="assets/Roshan_Resume.pdf">CV</a>. If you think my skills could contribute to your team, please reach out via <a href="https://www.linkedin.com/in/rsatapat/">LinkedIn</a> or email me at rsatapat@yahoo.com</p>
+<p>I’m currently looking for roles in data science, data analysis`x, or consulting. You can take a look at my <a href="assets/Roshan_Resume.pdf">CV</a>. If you think my skills could contribute to your team, please reach out via <a href="https://www.linkedin.com/in/rsatapat/">LinkedIn</a> or email me at rsatapat@yahoo.com</p>
 
 
     </div>
